@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <CodeBlocks_layout_file>
 	<ActiveTarget name="Release" />
-	<File name="../src/GUI/AvFrame.cpp" open="0" top="0" tabpos="1">
-		<Cursor position="6482" topLine="165" />
+	<File name="../src/GUI/AvFrame.cpp" open="0" top="0" tabpos="2">
+		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../src/GUI/AvFrame.hh" open="0" top="0" tabpos="2">
-		<Cursor position="1449" topLine="37" />
+		<Cursor position="792" topLine="0" />
 	</File>
-	<File name="../src/GUI/AvNotebook.cpp" open="0" top="0" tabpos="2">
-		<Cursor position="1050" topLine="30" />
+	<File name="../src/GUI/AvNotebook.cpp" open="0" top="0" tabpos="3">
+		<Cursor position="792" topLine="0" />
 	</File>
 	<File name="../src/GUI/AvNotebook.h" open="0" top="0" tabpos="0">
-		<Cursor position="99" topLine="10" />
+		<Cursor position="792" topLine="0" />
 	</File>
-	<File name="../src/GUI/AvPanel.cpp" open="0" top="0" tabpos="1">
-		<Cursor position="2128" topLine="39" />
+	<File name="../src/GUI/AvPanel.cpp" open="0" top="0" tabpos="4">
+		<Cursor position="792" topLine="0" />
 	</File>
-	<File name="../src/GUI/AvPanel.hh" open="0" top="0" tabpos="3">
-		<Cursor position="935" topLine="34" />
+	<File name="../src/GUI/AvPanel.hh" open="0" top="0" tabpos="1">
+		<Cursor position="792" topLine="0" />
 	</File>
 	<File name="../src/GUI/FileSelectionDialog.cpp" open="0" top="0" tabpos="4">
-		<Cursor position="869" topLine="0" />
+		<Cursor position="792" topLine="0" />
 	</File>
 	<File name="../src/GUI/FileSelectionDialog.hh" open="0" top="0" tabpos="0">
-		<Cursor position="292" topLine="0" />
+		<Cursor position="793" topLine="0" />
 	</File>
 	<File name="../src/GUI/StatusPanel.cpp" open="0" top="0" tabpos="1">
-		<Cursor position="3047" topLine="15" />
+		<Cursor position="792" topLine="0" />
 	</File>
 	<File name="../src/GUI/StatusPanel.hh" open="0" top="0" tabpos="0">
-		<Cursor position="213" topLine="7" />
+		<Cursor position="792" topLine="0" />
 	</File>
-	<File name="../src/GUI/rcids.h" open="0" top="0" tabpos="3">
-		<Cursor position="897" topLine="12" />
+	<File name="../src/GUI/rcids.h" open="1" top="1" tabpos="1">
+		<Cursor position="792" topLine="0" />
 	</File>
 	<File name="../src/whitehawkav.cpp" open="0" top="0" tabpos="1">
-		<Cursor position="522" topLine="24" />
+		<Cursor position="792" topLine="0" />
 	</File>
 </CodeBlocks_layout_file>
